# rpi-director

./: .gitignore  README.md  gpio_test.py  install.py  pyproject.toml  requirements.txt  rpi-director-client.service  rpi-director.service  rpi_director.py  settings.json  setup-networkmanager-static.sh  setup-virtual-interface-safe.sh  setup-virtual-interface.sh  setup.py  test_osc.py
rpi_director/: __init__.py  __main__.py  base.py  client.py  config.py  gpio.py  mqtt.py  server.py
